fix header wrap

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -68,7 +68,7 @@
 
         @media #{$screen-tablet-only} {
             justify-content: space-around;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
         }
     }
 
